ecmascript/parser/tests/test262-error-references/fail/364c1c6fe5df4e6c.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/364c1c6fe5df4e6c.js:1:15
  |
1 | try {} catch (42) {} 
  |               ^^

